# hopc

./: .gitignore  BUGS  Makefile  README.md  Setup.lhs  TODO  hopc.cabal  hopcruntime.c  hopcruntime.h  hopcstubs.c  hopcstubs.h
src/: Hopc.hs  Lisp.cf  Makefile  Makefile.bnfc  TestTyping.hs
src/Compilers/Hopc/: Compile.hs  Error.hs  Id.hs
src/Compilers/Hopc/Backend/: DumbC.hs
src/Compilers/Hopc/Backend/TinyC/: CPrinter.hs  CWriter.hs  FromClosure.hs  FromVM.hs  IR.hs  Lit.hs  Live.hs  Opt.hs  R.hs  RegAlloc.hs  Regs.hs  RegsType.hs  VM.hs
src/Compilers/Hopc/Backend/TinyC/VM/: Types.hs
src/Compilers/Hopc/Backend/TinyC/runtime/: Makefile  hopcposix.c  hopcruntime.c  hopcruntime.h  main.c  regress1  regress1.c  sleep.c
src/Compilers/Hopc/Backend/TinyC/runtime/t/: regress1
src/Compilers/Hopc/Frontend/: AlphaConv.hs  BetaReduction.hs  Closure.hs  Const.hs  Eliminate.hs  KTree.hs  KTyped.hs  LetFlatten.hs  Types.hs
src/Compilers/Hopc/Frontend/Lisp/: KNormalize.hs  Macro.hs  MacroEngine.hs  MacroExpand.hs  Parse.hs
src/Compilers/Hopc/Typing/: Infer.hs  Types.hs
t/: a1.hop  a2.hop  a3.hop  a4.hop  assign1.hop  clos1.hop  clos2.hop  clos3.hop  clos4.hop  cond1.hop  cond11.hop  cond2.hop  cond21.hop  cond22.hop  cond3.hop  cond4.hop  error1.hop  fork1.hop  fork2.hop  hof1.hop  hof2.hop  hof3.hop  hof4.hop  hof5.hop  ir1.hs  ir2.hop  l1.hop  n.hop  ooo.hop  q.hop  reg1.hop  reg2.hop  s0.hop  s01.hop  s1.hop  s11.hop  s2.hop  s3.hop  script1.hop  seq.hop  (+111 more)
